2010-04-27  Ivo van Poorten  <ivop@euronet.nl>
Implementation of both 8- and 16-bit IDE. If the MSB's are ignored, 
the interface is compatible with MyIDE (tested mainly with MYIDE44E.ROM).
Some advanced features, like SMART and DVD/CDROM support, are not there yet, 
but this is more than enough to write and test low level IDE Microdrive/CF 
code. For harddisks it might be beneficial to emulate a couple of busy cycles.


2010-04-26  James Wilkinson  <james@slor.net>
* ui.c: corrected H: error caused by turbo patch

* atari.c, colours.c: correct blank screen on platforms that do not support palette update

* atari_sdl.c, sound_oss.c: improve turbo mode for SDL build with synchronized sound and OSS sound


2010-04-20  James Wilkinson  <james@slor.net>
* atari.c, monitor.[ch] DOC/trainer.txt: committed trainer searcher by Achim Haertel.

* atari.[ch], ui.c: committed savestate sound patch by Tomasz Krasuski.


2010-04-19  James Wilkinson  <james@slor.net>
* akey.h, atari.[ch], atari_sdl.c, atari_x11.c, ui.c, dos/atari_vga.c, win32/atari_win32.c:
  Added support for F12 turbo mode.

* win32/joystick.c: do not stop joystick enumeration on dual stick settings failure

* emuos.h, emuos.lis: update for 2010

* win32/atari_win32.h, win32/keyboard.c: DirectInput cleanup


2010-04-16  James Wilkinson  <james@slor.net>
* win32/atari_win32.c: correct keystroke auto-repeat


2010-03-23  Perry McFarlane  <perry_m@fastmail.fm>
* DOC/USAGE, atari.c, configure.ac, mzpokeysnd.c, pbi.c, pbi_xld.[ch],
pokey.c, pokeysnd.c, votrax.c, new files: voicebox.[ch], votraxsnd.[ch]:
emulate the Alien Group Voice Box I and II


2010-01-29  Piotr Fusik  <fox@scene.pl>
* ui.h, ui_basic.c: changed source code from CRLF to LF


2010-01-27  Perry McFarlane  <perry_m@fastmail.fm>
* af80.[ch], atari.c: fix coldstart for AF80.


2010-01-21  James Wilkinson  <james@slor.net>
* win32/render_direct3d.cpp: disable extended functions if supporting runtime not installed.
